# collab-rec

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  constants.py  docker-compose.hub.yml  docker-compose.yml  pyproject.toml  requirements.txt
analysis/: ablation_results.py  agent_behavior_plots.py  agent_reliability.py  baselines.py  compute_ndcg.py  compute_ndcg_es.py  compute_relevance.py  compute_sigtests.py  diversity.py  early_stopping.py  get_scores.py  hallucination.py  helpers.py  plot_KDE.py  plot_city_distri.py  plot_lorenz_diversity.py  plot_time_tokens.py  plot_utils.py  sig_tests.py  test_scoring.py
experiments/: helpers.py  mami.py  milp_baseline.py  non_llm_baselines.py  random_seeds.py  run.py  run_sasi.py  sasi.py
input-data/: queries.csv
notebooks/: Ablation-Analysis Stats Sig.ipynb  Ablation-Analysis.ipynb  Agent Succes Individually.ipynb  Get configids of multiplicative scoring.ipynb  Hall Rel. Rate.ipynb  Patience-Based Stagnation.ipynb  Test analysis.ipynb  Testing relevance scores.ipynb  Time Taken.ipynb  Top Pop Analysis.ipynb  Validate_json.ipynb  create_sample.ipynb  kb-eda.ipynb  multiplicative scoring analysis.ipynb
prompts/: agent_specifications.json  base.jinja2  claude.jinja2  example_personalization.jinja2  example_popularity.jinja2  example_sustainability.jinja2  negotiation_context.jinja2  personalization.jinja2  popularity.jinja2  role_personalization.jinja2  role_popularity.jinja2  role_sustainability.jinja2  sasi.jinja2  sustainability.jinja2
prompts/examples/: constraint.txt  popularity.txt  sustainability.txt
prompts/feedback/: general_prompt_sys.txt  general_prompt_user.txt
prompts/init/: general_prompt_sys.txt  general_prompt_user.txt
prompts/iter/: general_prompt_sys.txt  general_prompt_user.txt
prompts/single-agent/: general_prompt_sys.txt  general_prompt_user.txt
src/adk/: pipeline.py  run.py
src/k_base/: context_retrieval.py
src/llm_setup/: model_init.py  (+2 more)
tests/: test_moderator.py  test_scoring_manager.py
(+52 files in other folders)
