[tool.poetry]
name = "collab-rec"
version = "0.1.0"
description = "Collab-REC multi-agent tourism recommendation framework"
authors = ["Collab-REC Authors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jinja2 = "*"
python-dotenv = "*"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
google-adk = "*"
anthropic = { extras = ["vertex"], version = "*" }
litellm = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
num2words = "*"
vllm = "*"
huggingface-hub = { extras = ["cli"], version = "*" }

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

