[project]
name = "collab-rec"
version = "0.1.0"
description = "Collab-REC multi-agent tourism recommendation framework"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "jinja2",
  "python-dotenv",
  "fastapi",
  "uvicorn[standard]",
  "google-adk",
  "anthropic[vertex]",
  "litellm",
  "pandas",
  "numpy",
  "matplotlib",
  "num2words",
  "vllm",
  "huggingface-hub",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
