[project]
name = "collab-rec"
version = "0.1.0"
description = "Collab-REC multi-agent tourism recommendation framework"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "jinja2",
  "python-dotenv",
  "fastapi",
  "uvicorn[standard]",
  "google-adk",
  "anthropic[vertex]",
  "litellm",
  "pandas",
  "numpy",
  "matplotlib",
  "num2words",
  "huggingface-hub",
]

[dependency-groups]
dev = ["pytest"]
# Optional GPU serving stack; vLLM wheels are Linux x86_64 only.
gpu = ["vllm; sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
